Added links to html file

--- a/index.html
+++ b/index.html
@@ -95,34 +95,34 @@
 
     <!--projects and leetcode-->
 
-    <section class = "projects bg-dark">
-      <div class="container-sm">
-        <h2 class="text-xxl text-center">Projects <i class='fas fa-laptop'></i></h2>
-        <p class = "text-md text-center">Here are some of my projects</p>
-        <div class="project-links">
-          <div class="card">
-
-            <p>Quick description here text text text text text text text text text text 
-              text text text text text  text text text text text  text text text text text 
-              text text text text text  text text text text text  text text text text text 
-            </p>
-              <a href="#" class = "text-white">My website</a></div>
-          <div class="card">
-            <p>Quick description here text text text text text text text text text text 
-              text text text text text  text text text text text  text text text text text 
-              text text text text text  text text text text text  text text text text text </p>
-              <a href="#" class = "text-white">Food Menu</a>
-          </div>
-          <div class="card">
-            <p>Quick description here text text text text text text text text text text 
-              text text text text text  text text text text text  text text text text text 
-              text text text text text  text text text text text  text text text text text </p>
-             <a href="#" class = "text-white">Software Design</a></div>
-        </div>
-
+    <section class="projects bg-dark">
+  <div class="container-sm">
+    <h2 class="text-xxl text-center">Projects <i class='fas fa-laptop'></i></h2>
+    <p class="text-md text-center">Here are some of my projects</p>
+    <div class="project-links">
+      <!-- Project 1: AI-Bot -->
+      <div class="project-card card">
+        <h3 class="text-lg text-white">AI-Bot</h3>
+        <p class="text-sm text-white">A Python-based chatbot leveraging NLP for interactive conversations. Built with OpenAI's API and custom training datasets.</p>
+        <a href="https://github.com/Matthew-Tian5/AI-Bot" class="btn btn-primary">View Project</a>
       </div>
 
-    </section>
+      <!-- Project 2: Student Formatter -->
+      <div class="project-card card">
+        <h3 class="text-lg text-white">Student Formatter</h3>
+        <p class="text-sm text-white">Automates student data processing with Pandas. Cleans CSV/Excel files and generates formatted reports.</p>
+        <a href="https://github.com/Matthew-Tian5/Student-Formatter" class="btn btn-primary">View Project</a>
+      </div>
+
+      <!-- Project 3: Vulnerability Scanner -->
+      <div class="project-card card">
+        <h3 class="text-lg text-white">Vulnerability Scanner</h3>
+        <p class="text-sm text-white">Security tool that scans networks for open ports and common vulnerabilities using Python and Nmap.</p>
+        <a href="https://github.com/Matthew-Tian5/Vulnerability-Scanner" class="btn btn-primary">View Project</a>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!--contact me-->
     <section class = "contact-me" id = "contact">
@@ -144,13 +144,13 @@
             <div class="cm-card-body">
               <ul>
                 <li>
-                  <a href="#" class="cm-links"><img src="images/Instagram_icon.png" alt="Matthew" class = "cm-logos">Instagram</a>
+                  <a href="https://www.instagram.com/matthew.0520m/" class="cm-links"><img src="images/Instagram_icon.png" alt="Matthew" class = "cm-logos">Instagram</a>
                 </li>
                 <li>
-                  <a href="#" class="cm-links"><img src="images/linked-in-logo.png" alt="Matthew" class = "cm-logos"> Linked In</a>
+                  <a href="https://www.linkedin.com/in/matthew-tian-1a7a5236a/" class="cm-links"><img src="images/linked-in-logo.png" alt="Matthew" class = "cm-logos"> Linked In</a>
                 </li>
                 <li>
-                  <a href="#" class="cm-links"><img src="images/github.png" alt="Matthew" class = "cm-logos"> Github</a>
+                  <a href="https://github.com/Matthew-Tian5" class="cm-links"><img src="images/github.png" alt="Matthew" class = "cm-logos"> Github</a>
                 </li>
                 <li>
                   <a href="matthew.tian2005@gmail.com" class="cm-links"><i class=""far-fas-address-book></i> Email</a>
@@ -174,7 +174,7 @@
             <div class="cm-card-body">
               <ul>
                 <li>
-                  <i class="fa-solid fa-address-card"></i><iframe src="Resume test.pdf" width="100%" height="50%"> Resume</iframe>
+                  <i class="fa-solid fa-address-card"></i><iframe src="Resume/Matthew Tian Resume.docx" width="100%" height="50%"> Resume</iframe>
 
                 </li>
               </ul>
