Update index.html bug fixes

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="cm-header">
               <h4 class="cm-heading text-xxl">Contacts</h4>
                 <p class="cm-card-subheading text-md text-gb">
-                  Contact me at any of the following platforms
+                  Click to contact me at any of the following platforms
                 </p>
             </div>
           
@@ -183,8 +183,7 @@
                   <a href="https://github.com/Matthew-Tian5" class="cm-links text-lg"><img src="images/github.png" alt="Matthew" class = "cm-logos"> Github</a>
                 </li>
                 <li>
-                  <a href="matthew.tian2005@gmail.com" class="cm-links text-lg"><i class=""far-fas-address-book></i> Email</a>
-
+                  <a href="mailto:matthew.tian2005@gmail.com" class="cm-links text-lg"><i class="fas fa-envelope"></i>   Email</a>
                 </li>
               </ul>
             </div>
